--- a/@latest/src/App.css
+++ b/@latest/src/App.css
@@ -23,3 +23,16 @@ img {
   border: solid 2px darkgreen;
   border-radius: 10px;
 }
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+}
